deploy-website/stage/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/server-alias: website-stage.canaryis.com
spec:
  rules:
    - host: "website-k8s-stage.canaryis.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: express-node
  tls:
    - hosts:
        - website-k8s-stage.canaryis.com
      secretName: star-canaryis-com-cert
